// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React Wrapper should be added from mock custom elements JSON 1`] = `
"
import * as React from 'react';
import { createComponent, EventName } from '@lit/react';
import { MockComponent as MockComponentReact } from './index';

export * from './defs';

export const MockComponent = createComponent({
    displayName: 'MockComponent',
    elementClass: MockComponentReact,
    react: React,
    tagName: 'mock-component',
    events: {
        onCustomEvent: 'custom-event' as EventName<CustomEvent>,
        onAnotherCustomEvent: 'another-custom-event' as EventName<CustomEvent>,
    },
});
"
`;

exports[`React Wrapper should be named the same as the component itself 1`] = `
"
import * as React from 'react';
import { createComponent } from '@lit/react';
import { ButtonComponent as ButtonComponentReact } from './index';

export * from './defs';

export const ButtonComponent = createComponent({
    displayName: 'ButtonComponent',
    elementClass: ButtonComponentReact,
    react: React,
    tagName: 'mock-component',
    events: {},
});
"
`;

exports[`React Wrapper should leave the events object empty if the component contains no custom events 1`] = `
"
import * as React from 'react';
import { createComponent } from '@lit/react';
import { MockComponent as MockComponentReact } from './index';

export * from './defs';

export const MockComponent = createComponent({
    displayName: 'MockComponent',
    elementClass: MockComponentReact,
    react: React,
    tagName: 'mock-component',
    events: {},
});
"
`;

exports[`React Wrapper should only be added if the component contains custom elements 1`] = `""`;
